MBD-27652, Handle Method Name Change for initialize

--- a/GACSDK.xcframework/ios-arm64/GACSDK.framework/Modules/GACSDK.swiftmodule/arm64-apple-ios.abi.json
+++ b/GACSDK.xcframework/ios-arm64/GACSDK.framework/Modules/GACSDK.swiftmodule/arm64-apple-ios.abi.json
@@ -4950,10 +4950,7 @@
         "name": "Foundation",
         "printedName": "Foundation",
         "declKind": "Import",
-        "moduleName": "GACSDK",
-        "declAttributes": [
-          "RawDocComment"
-        ]
+        "moduleName": "GACSDK"
       },
       {
         "kind": "Import",
