--- a/GACSDK.xcframework/ios-arm64_x86_64-simulator/GACSDK.framework/Modules/GACSDK.swiftmodule/arm64-apple-ios-simulator.abi.json
+++ b/GACSDK.xcframework/ios-arm64_x86_64-simulator/GACSDK.framework/Modules/GACSDK.swiftmodule/arm64-apple-ios-simulator.abi.json
@@ -4950,10 +4950,7 @@
         "name": "Foundation",
         "printedName": "Foundation",
         "declKind": "Import",
-        "moduleName": "GACSDK",
-        "declAttributes": [
-          "RawDocComment"
-        ]
+        "moduleName": "GACSDK"
       },
       {
         "kind": "Import",
